# osgLoadLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json  x64-windows-custom.cmake
osgLoadLib/: CMakeLists.txt
osgLoadLib/include/: FOsgbLoad.h  IOsgbLoad.h  macro.h
osgLoadLib/src/: FOsgbLoad.cpp  IOsgbLoad.cpp
ports/osgLoadLib/: portfile.cmake  vcpkg.json
test/: CMakeLists.txt  main.cpp
